--- a/test-output/report.html
+++ b/test-output/report.html
@@ -43,7 +43,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Jan 31, 2019 04:36:50 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Jan 31, 2019 07:51:56 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -101,7 +101,7 @@
                     <canvas id='parent-analysis' width='90' height='70'></canvas>
                 </div>
                 <div class='block text-small'>
-                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>2</span> test(s) passed</span>
+                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>1</span> test(s) passed</span>
                 </div>
                 <div class='block text-small'>
                     <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
@@ -124,15 +124,15 @@
 			<ul id='test-collection' class='test-collection'>
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>login manager username and password</span>
-						<span class='test-time'>Jan 31, 2019 04:36:57 PM</span>
+						<span class='test-name'>Total price test</span>
+						<span class='test-time'>Jan 31, 2019 07:52:02 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jan 31, 2019 04:36:57 PM</span>
-	<span class='label end-time'>Jan 31, 2019 04:36:57 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
+	<span class='label start-time'>Jan 31, 2019 07:52:02 PM</span>
+	<span class='label end-time'>Jan 31, 2019 07:52:02 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+1ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -146,28 +146,22 @@
 		<tbody>
 			<tr class='log' status='info'>
 				<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-				<td class='timestamp'>4:36:57 PM</td>
+				<td class='timestamp'>7:52:02 PM</td>
 				<td class='step-details'>
 						Loging to application
 					
 				</td>
 			</tr>
+			<tr class='log' status='info'>
+				<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
+				<td class='timestamp'>7:52:20 PM</td>
+				<td class='step-details'>
+						Verifying total price from Orders by Vendor page
+					
+				</td>
+			</tr>
 		</tbody>
 	</table>
-</div>
-					</div>
-				</li>
-				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
-					<div class='test-heading'>
-						<span class='test-name'>total price from Orders by Vendor page</span>
-						<span class='test-time'>Jan 31, 2019 04:37:06 PM</span>
-						<span class='test-status right pass'>pass</span>
-					</div>
-					<div class='test-content hide'>
-<div class='test-time-info'>
-	<span class='label start-time'>Jan 31, 2019 04:37:06 PM</span>
-	<span class='label end-time'>Jan 31, 2019 04:37:06 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
 					</div>
 				</li>
@@ -199,7 +193,7 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Tests
-					<div class='panel-lead'>2</div>
+					<div class='panel-lead'>1</div>
 				</div>
 			</div>
 			<div class='col s2'>
@@ -211,19 +205,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jan 31, 2019 04:36:50 PM</div>
+					<div class='panel-lead'>Jan 31, 2019 07:51:56 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jan 31, 2019 04:37:07 PM</div>
+			 		<div class='panel-lead'>Jan 31, 2019 07:52:23 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 17s+254ms</div>
+					<div class='panel-lead'>0h 0m 27s+420ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -262,8 +256,8 @@
 		<!-- container -->
 		<script>
 			var statusGroup = {
-                parentCount: 2,
-				passParent: 2,
+                parentCount: 1,
+				passParent: 1,
 				failParent: 0,
 				fatalParent: 0,
 				errorParent: 0,
@@ -294,7 +288,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "login manager username and password":0,"total price from Orders by Vendor page":0
+			        "Total price test":0.001
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/c23457b/v3html/js/extent.js' type='text/javascript'></script>
