--- a/test-output/report.html
+++ b/test-output/report.html
@@ -43,7 +43,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Jan 31, 2019 07:51:56 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Feb 2, 2019 06:51:51 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -124,44 +124,15 @@
 			<ul id='test-collection' class='test-collection'>
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>Total price test</span>
-						<span class='test-time'>Jan 31, 2019 07:52:02 PM</span>
+						<span class='test-name'>Indivisual price test</span>
+						<span class='test-time'>Feb 2, 2019 06:52:02 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jan 31, 2019 07:52:02 PM</span>
-	<span class='label end-time'>Jan 31, 2019 07:52:02 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+1ms</span>
-</div>
-<div class='test-steps'>
-	<table class='bordered table-results'>
-		<thead>
-			<tr>
-				<th>Status</th>
-				<th>Timestamp</th>
-				<th>Details</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr class='log' status='info'>
-				<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-				<td class='timestamp'>7:52:02 PM</td>
-				<td class='step-details'>
-						Loging to application
-					
-				</td>
-			</tr>
-			<tr class='log' status='info'>
-				<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-				<td class='timestamp'>7:52:20 PM</td>
-				<td class='step-details'>
-						Verifying total price from Orders by Vendor page
-					
-				</td>
-			</tr>
-		</tbody>
-	</table>
+	<span class='label start-time'>Feb 2, 2019 06:52:02 PM</span>
+	<span class='label end-time'>Feb 2, 2019 06:52:02 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
 					</div>
 				</li>
@@ -205,19 +176,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jan 31, 2019 07:51:56 PM</div>
+					<div class='panel-lead'>Feb 2, 2019 06:51:51 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jan 31, 2019 07:52:23 PM</div>
+			 		<div class='panel-lead'>Feb 2, 2019 06:52:29 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 27s+420ms</div>
+					<div class='panel-lead'>0h 0m 38s+185ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -288,7 +259,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "Total price test":0.001
+			        "Indivisual price test":0
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/c23457b/v3html/js/extent.js' type='text/javascript'></script>
