--- a/test-output/report.html
+++ b/test-output/report.html
@@ -43,7 +43,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Feb 2, 2019 11:15:22 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Feb 4, 2019 11:00:47 AM</span>
 			</a>
 		</ul>
 	</div>
@@ -101,7 +101,7 @@
                     <canvas id='parent-analysis' width='90' height='70'></canvas>
                 </div>
                 <div class='block text-small'>
-                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>2</span> test(s) passed</span>
+                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>1</span> test(s) passed</span>
                 </div>
                 <div class='block text-small'>
                     <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
@@ -124,14 +124,14 @@
 			<ul id='test-collection' class='test-collection'>
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>Copyright displaying test</span>
-						<span class='test-time'>Feb 2, 2019 11:15:26 PM</span>
+						<span class='test-name'>Indivisual price test</span>
+						<span class='test-time'>Feb 4, 2019 11:00:49 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Feb 2, 2019 11:15:26 PM</span>
-	<span class='label end-time'>Feb 2, 2019 11:15:26 PM</span>
+	<span class='label start-time'>Feb 4, 2019 11:00:49 AM</span>
+	<span class='label end-time'>Feb 4, 2019 11:00:49 AM</span>
 	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
 <div class='test-steps'>
@@ -146,44 +146,17 @@
 		<tbody>
 			<tr class='log' status='info'>
 				<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-				<td class='timestamp'>11:15:26 PM</td>
+				<td class='timestamp'>11:00:49 AM</td>
 				<td class='step-details'>
-						Verifying copyright is displayed on home page
+						Verifying Indivual price in each product by Vendor page
 					
 				</td>
 			</tr>
-		</tbody>
-	</table>
-</div>
-					</div>
-				</li>
-				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
-					<div class='test-heading'>
-						<span class='test-name'>logo displaying test</span>
-						<span class='test-time'>Feb 2, 2019 11:15:34 PM</span>
-						<span class='test-status right pass'>pass</span>
-					</div>
-					<div class='test-content hide'>
-<div class='test-time-info'>
-	<span class='label start-time'>Feb 2, 2019 11:15:34 PM</span>
-	<span class='label end-time'>Feb 2, 2019 11:15:34 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
-</div>
-<div class='test-steps'>
-	<table class='bordered table-results'>
-		<thead>
-			<tr>
-				<th>Status</th>
-				<th>Timestamp</th>
-				<th>Details</th>
-			</tr>
-		</thead>
-		<tbody>
 			<tr class='log' status='info'>
 				<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-				<td class='timestamp'>11:15:34 PM</td>
+				<td class='timestamp'>11:00:57 AM</td>
 				<td class='step-details'>
-						Verifying logo is displayed on home page
+						Verifying new order page displayed
 					
 				</td>
 			</tr>
@@ -220,7 +193,7 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Tests
-					<div class='panel-lead'>2</div>
+					<div class='panel-lead'>1</div>
 				</div>
 			</div>
 			<div class='col s2'>
@@ -232,19 +205,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Feb 2, 2019 11:15:22 PM</div>
+					<div class='panel-lead'>Feb 4, 2019 11:00:47 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Feb 2, 2019 11:15:40 PM</div>
+			 		<div class='panel-lead'>Feb 4, 2019 11:01:19 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 18s+17ms</div>
+					<div class='panel-lead'>0h 0m 31s+220ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -283,8 +256,8 @@
 		<!-- container -->
 		<script>
 			var statusGroup = {
-                parentCount: 2,
-				passParent: 2,
+                parentCount: 1,
+				passParent: 1,
 				failParent: 0,
 				fatalParent: 0,
 				errorParent: 0,
@@ -315,7 +288,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "Copyright displaying test":0,"logo displaying test":0
+			        "Indivisual price test":0
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/c23457b/v3html/js/extent.js' type='text/javascript'></script>
