--- a/test-output/report.html
+++ b/test-output/report.html
@@ -43,7 +43,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Feb 4, 2019 11:00:47 AM</span>
+			<span class='label blue darken-3 suite-start-time'>Feb 5, 2019 06:21:06 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -125,13 +125,13 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Indivisual price test</span>
-						<span class='test-time'>Feb 4, 2019 11:00:49 AM</span>
+						<span class='test-time'>Feb 5, 2019 06:21:07 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Feb 4, 2019 11:00:49 AM</span>
-	<span class='label end-time'>Feb 4, 2019 11:00:49 AM</span>
+	<span class='label start-time'>Feb 5, 2019 06:21:07 PM</span>
+	<span class='label end-time'>Feb 5, 2019 06:21:07 PM</span>
 	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
 <div class='test-steps'>
@@ -146,17 +146,9 @@
 		<tbody>
 			<tr class='log' status='info'>
 				<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-				<td class='timestamp'>11:00:49 AM</td>
+				<td class='timestamp'>6:21:07 PM</td>
 				<td class='step-details'>
 						Verifying Indivual price in each product by Vendor page
-					
-				</td>
-			</tr>
-			<tr class='log' status='info'>
-				<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-				<td class='timestamp'>11:00:57 AM</td>
-				<td class='step-details'>
-						Verifying new order page displayed
 					
 				</td>
 			</tr>
@@ -205,19 +197,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Feb 4, 2019 11:00:47 AM</div>
+					<div class='panel-lead'>Feb 5, 2019 06:21:06 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Feb 4, 2019 11:01:19 AM</div>
+			 		<div class='panel-lead'>Feb 5, 2019 06:21:22 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 31s+220ms</div>
+					<div class='panel-lead'>0h 0m 16s+821ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
